[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game/Autoload/SoundManager.gd" type="Script" id=1]
[ext_resource path="res://Game/Sounds/Laser-Sound.ogg" type="AudioStream" id=2]
[ext_resource path="res://Game/Sounds/Hit1.ogg" type="AudioStream" id=3]
[ext_resource path="res://Game/Sounds/Hit2.ogg" type="AudioStream" id=4]
[ext_resource path="res://Game/Sounds/ShipHit.ogg" type="AudioStream" id=5]

[node name="SoundManager" type="Node"]

script = ExtResource( 1 )

[node name="Laser" type="AudioStreamPlayer2D" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Hit1" type="AudioStreamPlayer2D" parent="." index="1"]

stream = ExtResource( 3 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Hit2" type="AudioStreamPlayer2D" parent="." index="2"]

stream = ExtResource( 4 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="ShipHit" type="AudioStreamPlayer2D" parent="." index="3"]

stream = ExtResource( 5 )
volume_db = -30.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1


